force-app/main/default/objects/Parents__c/Parents__c.object-meta.xml
<CustomObject>
    <description>Stores information about students&apos; parents or guardians, including contact details, relationships to students, and communication history.</description>
    <label>Parents</label>
    <nameField>
        <label>Parents Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>