force-app/main/default/objects/Parents__c/fields/Number_of_Students__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Students__c</fullName>
    <label>Number_of_Students</label>
    <summaryForeignKey>Student__c.Parents__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>