force-app/main/default/objects/Parents__c/fields/PrimaryContact__c.field-meta.xml
<CustomField>
    <fullName>PrimaryContact__c</fullName>
    <label>PrimaryContact</label>
    <type>Phone</type>
</CustomField>